@@ -1,3 +1,5 @@
 Ori Avtalion for suggesting some improvements
 Chris Lamb for being interested
 Emilio Di Prima for the windows port
+Konstantin Lepa <konstantin.lepa at gmail.com> (for the termcolor module)
+
