@@ -1,6 +1,7 @@
 1.1
 - Incorrect relational operations now raise an exception instead of returning None
 - Forces relations to have correct names for attributes
+- Colored output in readline mode
 
 1.0
 - Adds history in the GUI
